<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/image"
    tools:context="car.parking.system.room.MainActivity">


 <TextView
     android:layout_width="339dp"
     android:layout_height="wrap_content"
     android:layout_centerHorizontal="true"
     android:layout_marginTop="150dp"
     android:text="@string/app_name"
     android:textAlignment="center"
     android:textColor="@color/purple_700"
     android:textSize="@dimen/activity_size"
     android:textStyle="bold">

 </TextView>

 <Button
     android:id="@+id/botaoEnter"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginEnd="200dp"
     android:layout_marginTop="400dp"
     android:layout_centerHorizontal="true"
     android:text="@string/botaoEnter">

 </Button>

 <Button
     android:id="@+id/botaoAbout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginEnd="200dp"
     android:layout_marginTop="500dp"
     android:layout_centerHorizontal="true"
     android:text="@string/botaoAbout">

 </Button>


 <Button
     android:id="@+id/botaoExit"
     android:layout_width="256dp"
     android:layout_height="wrap_content"
     android:layout_centerHorizontal="true"
     android:layout_marginTop="650dp"
     android:layout_marginEnd="200dp"
     android:minHeight="48dp"
     android:text="@string/botaoExit"
     tools:ignore="TouchTargetSizeCheck">

 </Button>




</RelativeLayout>