<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/azul"
    tools:context="car.parking.system.room.LoginActivity">

    <RelativeLayout
        android:layout_width="359dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="-29dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:layout_marginTop="25dp"
            android:paddingTop="10dp"
            app:srcCompat="@drawable/img1" />

        <TextView
            android:id="@+id/about_text_Proj2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="35dp"
            android:paddingBottom="25dp"
            android:text="@string/about_text_Proj2"
            android:textColor="@color/purple_700"
            android:textSize="@dimen/activity_horizontal_margin"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/ed_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/about_text_Proj2"
            android:gravity="center_horizontal"
            android:hint="@string/ToastSingup2"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textAlignment="center"
            android:textColorHint="@color/purple_700" />

        <EditText
            android:id="@+id/ed_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ed_email"
            android:gravity="center_horizontal"
            android:hint="@string/ToastSingup3"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textAlignment="center"
            android:textColorHint="@color/purple_700" />

        <Button
            android:id="@+id/btn_singin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ed_password"
            android:layout_centerInParent="true"
            android:layout_marginTop="25dp"
            android:text="@string/botaoSingin"
            android:textAllCaps="false">

        </Button>

        <Button
            android:id="@+id/btn_registro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_singin"
            android:layout_centerInParent="true"
            android:onClick="buttonReg"
            android:text="@string/botaoRegistar"
            android:textAllCaps="false">

        </Button>

        <Button
            android:id="@+id/btn_close"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_singin"
            android:layout_centerVertical="true"
            android:layout_marginTop="50dp"
            android:onClick="buttonMain"
            android:text="@string/botaoClose"
            android:textAllCaps="false">

        </Button>


    </RelativeLayout>

</RelativeLayout>