<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/azul"
    tools:context="car.parking.system.room.MenuActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_alignParentTop="true"
        android:paddingTop="25dp"
        android:layout_width="245dp"
        android:layout_height="161dp"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="36dp"
        app:srcCompat="@drawable/img1" />


    <TextView
        android:id="@+id/about_text_Proj2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/purple_700"
        android:text="@string/about_text_Proj2"
        android:layout_marginTop="35dp"
        android:layout_centerInParent="true"
        android:layout_below="@+id/imageView"
        android:paddingBottom="25dp"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/activity_horizontal_margin"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@+id/about_text_Proj2"
        android:text="@string/login_sucessful"
        android:textAlignment="center"
        android:textSize="25dp" />

    <Button
        android:id="@+id/btn_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:onClick="buttonLogout"
        android:layout_centerInParent="true"
        android:text="@string/botaoLogout"
        android:textAllCaps="false">

    </Button>



</RelativeLayout>