<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:defaultNavHost="true"
    android:name="androidx.navigation.fragment.NavHostFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/azul"
    tools:context="car.parking.system.room.SobreProjetoActivity">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout"
            android:layout_marginTop="6dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/about_text_Proj1"
                android:textColor="@color/purple_700"
                android:textSize="@dimen/activity_size"
                android:textStyle="bold" />

        </LinearLayout>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            app:srcCompat="@drawable/img1" />


        <TextView
            android:id="@+id/about_text_Proj2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="17dp"
            android:text="@string/about_text_Proj2"
            android:textColor="@color/purple_700"
            android:textSize="@dimen/activity_horizontal_margin"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/about_text_Proj3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/about_text_Proj2"
            android:textAlignment="center"
            android:layout_marginTop="7dp"
            android:autoSizeMaxTextSize="@dimen/text_margin"
            android:text="@string/about_text_Proj3"
            android:textColor="@color/purple_700"
            android:textStyle="bold"
            tools:ignore="UnknownIdInLayout" />


    <Button
        android:id="@+id/btn_close"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/about_text_Proj3"
        android:onClick="buttonMain3"
        android:layout_marginTop="15dp"
        android:layout_centerInParent="true"
        android:text="@string/botaoClose"
        android:textAllCaps="false">

    </Button>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    </ScrollView>


</RelativeLayout>
